Issue 1 Add whitespace to first child elements and quotes
Improve readability and enable quotes to be visually separated
from each other.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,15 @@
 
 // Base-theme overrides.
 @import 'overrides';
+
+@import "quotes";
+
+.group-left,
+.group-right {
+  > div {
+    margin: 1em;
+  }
+  div:first-child {
+    margin-top: 0;
+  }
+}
